BUG:1 data_width and makefile changes
In Uart_tx.v and Uart_rx.v there are variables for counting bits in transfer data, the count variable width should be decided accordingly with transfer data width but it is hard coded --solved. Now User can give master sequence count and data_width from make command

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -6,13 +6,12 @@ vivado: vivado_build_tb vivado_sim
 
 
 vivado_build_tb:
-#	xvlog -sv -L uvm $(DV_PATH)/env/axi_intf.sv
-	xvlog -sv -L uvm $(DV_PATH)/tb/top.sv
+	xvlog -sv -d COUNT=$(count) -d DATA_WIDTH=$(dataw) -L uvm $(DV_PATH)/tb/top.sv 
 	xelab top -relax -s top -debug wave -timescale 1ns/1ps
 
 
 vivado_sim:
-	xsim  top -runall
+	xsim  top -testplusarg UVM_TESTNAME=basic_test -testplusarg UVM_VERBOSITY=UVM_LOW -runall
 
 vivado_clean:
 	rm -rf xsim.dir webtalk* xelab* xvlog* xsim* *.log *.vcd *.wdb
