--- a/sim/Makefile
+++ b/sim/Makefile
@@ -35,5 +35,5 @@ vivado_sim:
 	xsim  top --sv_seed SEED=$(seed) -testplusarg UVM_TESTNAME=basic_test -testplusarg UVM_VERBOSITY=UVM_LOW -runall
 
 vivado_clean:
-	rm -rf xsim.dir webtalk* xelab* xvlog* xsim* *.log *.vcd *.wdb
+	rm -rf xsim.dir webtalk* xelab* xvlog* xsim* *.log *.vcd *.wdb *.txt
 
